// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-0"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly X axis label rotation 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-34"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly width horizontal grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-30"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly width vertical grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-32"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with a different line type 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-22"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with bars and lines 1`] = `
.c4 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c6 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c3 {
  fill: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c5 {
  fill: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: rgb(44,98,122);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(166,224,251);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-20"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={18}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={17}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={16}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
    </g>
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c3"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c5"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c6"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`render correctly with curveBundle line type 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-24"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with curveBundle line type 2`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-26"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with curveBundle line type 3`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-28"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with dates as name 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-12"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with dates as name 2`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-14"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with height 1`] = `
.c0 {
  height: 400px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-4"
  size={
    Object {
      "height": 400,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with only bars 1`] = `
.c1 {
  fill: rgb(44,98,122);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(166,224,251);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-16"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={18}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={17}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={16}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
    </g>
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with only lines 1`] = `
.c2 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c4 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c3 {
  fill: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-18"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c1"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c2"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c2"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c2"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c2"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c3"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`render correctly with width 1`] = `
.c0 {
  height: 90px;
  width: 400px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-2"
  size={
    Object {
      "height": 90,
      "width": 400,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with width and height 1`] = `
.c0 {
  height: 300px;
  width: 400px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-6"
  size={
    Object {
      "height": 300,
      "width": 400,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with x axis label 1`] = `
.c1 {
  text-anchor: middle;
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-8"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <text
      className="x-axis-label c1"
      height={0}
      width={0}
      x={0}
      y={33.333333333333336}
    >
      foo
    </text>
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`render correctly with y axis label 1`] = `
.c1 {
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts_bar-line-10"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="silky-charts-container"
    transform="translate(50, 40)"
  >
    <text
      className="y-axis-label c1"
      height={0}
      width={0}
      x={-0}
      y={-33.333333333333336}
    >
      foo
    </text>
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;
